fix: migrate deprecated sass properties to new @use flags

--- a/src/style/app/_loading.scss
+++ b/src/style/app/_loading.scss
@@ -1,7 +1,9 @@
+@use "../setup/mixins";
+
 .page-loading {
   position: fixed;
   inset: 0;
-  @include flex(20px, center, center, column);
+  @include mixins.flex(20px, center, center, column);
 
   .loader {
     width: 56px;
