--- a/src/style/setup/index.scss
+++ b/src/style/setup/index.scss
@@ -1,4 +1,4 @@
-@import "./reset";
-@import "./fonts";
-@import "./variables";
-@import "./mixins";
+@use "reset";
+@use "fonts";
+@use "variables";
+@use "mixins";
