--- a/src/style/app/_button.scss
+++ b/src/style/app/_button.scss
@@ -1,12 +1,15 @@
+@use "../setup/fonts";
+@use "../setup/mixins";
+
 .btn {
-  @include font(700);
-  @include t();
+  @include fonts.font(700);
+  @include mixins.t();
   height: 36px;
   line-height: 36px;
   border: 2px solid var(--color-blue);
   color: var(--color-blue);
   border-radius: 18px;
-  @include flex(10px, flex-start, center);
+  @include mixins.flex(10px, flex-start, center);
   display: inline-flex;
   padding: 0 20px;
   font-size: 1.4rem;
@@ -52,5 +55,5 @@
 }
 
 .btn-wrap {
-  @include flex(10px);
+  @include mixins.flex(10px);
 }
