--- a/src/style/app/_navigation.scss
+++ b/src/style/app/_navigation.scss
@@ -1,3 +1,6 @@
+@use "../setup/fonts";
+@use "../setup/mixins";
+
 #navigation {
   position: fixed;
   bottom: 1.5em;
@@ -33,7 +36,7 @@
       z-index: 5;
 
       .bg {
-        @include t(0.5s);
+        @include mixins.t(0.5s);
         display: block;
         position: absolute;
         left: 0;
@@ -50,9 +53,9 @@
         width: 100%;
 
         a {
-          @include t();
-          @include font(700);
-          @include flex(10px, center, center);
+          @include mixins.t();
+          @include fonts.font(700);
+          @include mixins.flex(10px, center, center);
           text-transform: uppercase;
           width: 100%;
           height: 48px;
@@ -82,8 +85,8 @@
   }
 
   .btn-up {
-    @include t();
-    @include flex(0, center);
+    @include mixins.t();
+    @include mixins.flex(0, center);
     position: absolute;
     left: calc(100% + 16px);
     height: 48px;
